# voice-clone

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_APPROVAL_SYSTEM.md  CLI_MOCK_FIX_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GRADIO_DOCS_INDEX.md  GRADIO_INTEGRATION_COMPLETE.md  GRADIO_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  PR7_FINAL_RESOLUTION.md  PR7_PREVENTION_SOLUTION.md  PR7_PYTHON311_FAILURE_ANALYSIS.md  PROJECT_STATUS.md  QUICK_START_IMPLEMENTATION.md  README.md  RESUMEN_TRABAJO_COMPLETADO.md  SECURITY.md  SETUP_COMPLETE.md  TASK_1.3_COMPLETION_SUMMARY.md  TASK_2.3_COMPLETION_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_4.1_COMPLETION_SUMMARY.md  TASK_4.2.4_CHARACTER_COUNTER_SUMMARY.md  convert_samples.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/: SECURITY_SETUP.md  dependabot.yml  pull_request_template.md
apps/core/: .env.example  DOMAIN_VALIDATION.md  Makefile  pyproject.toml  requirements.txt  setup.py
apps/core/config/: config.yaml
apps/core/config/profiles/: consistent.yaml  energetic.yaml  natural.yaml
apps/core/docs/: UI_INTEGRATION_GUIDE.md
apps/core/src/: __init__.py
apps/core/src/api/: __init__.py  studio.py
apps/core/src/app/: __init__.py
apps/core/src/app/dto/: __init__.py  batch_dto.py  generation_dto.py  voice_profile_dto.py
apps/core/src/app/use_cases/: __init__.py  create_voice_profile.py  generate_audio.py  list_voice_profiles.py  process_batch.py  validate_audio_samples.py
apps/core/src/domain/: exceptions.py
apps/core/src/domain/models/: __init__.py  audio_sample.py  voice_profile.py
apps/core/src/domain/ports/: __init__.py  audio_processor.py  config_provider.py  profile_repository.py  tts_engine.py
apps/core/src/domain/services/: __init__.py  audio_generation.py  voice_cloning.py
apps/core/src/infra/: __init__.py
apps/core/src/infra/audio/: __init__.py  converter.py  effects.py  processor_adapter.py  validator.py
apps/core/src/infra/config/: __init__.py  dict_config.py  env_config.py  yaml_config.py
apps/core/src/infra/engines/: __init__.py
apps/core/src/infra/engines/qwen3/: __init__.py  adapter.py  config.py  inference.py  model_loader.py
apps/core/src/infra/engines/qwen3/modes/: __init__.py  clone_mode.py  custom_mode.py  design_mode.py
apps/core/src/infra/persistence/: __init__.py  file_profile_repository.py  json_serializer.py
apps/core/tests/: conftest.py
apps/core/tests/api/: test_studio.py
apps/core/tests/app/use_cases/: test_create_voice_profile.py  test_generate_audio.py  test_list_voice_profiles.py  test_process_batch.py  test_validate_audio_samples.py
apps/core/tests/application/use_cases/: test_create_voice_profile.py  test_list_voice_profiles.py  test_process_batch.py  test_validate_audio_samples.py
apps/core/tests/domain/models/: test_voice_profile.py
apps/core/tests/domain/services/: test_audio_generation.py  test_voice_cloning.py
apps/core/tests/infra/: test_file_repository.py
apps/core/tests/infra/audio/: test_processor_adapter.py
apps/core/tests/infra/engines/: test_qwen3_adapter.py
apps/core/tests/infrastructure/: test_file_repository.py
apps/core/tests/infrastructure/audio/: __init__.py
apps/core/tests/infrastructure/engines/: __init__.py  test_qwen3_adapter.py
apps/core/tests/integration/: test_end_to_end.py  test_hexagonal_architecture.py
apps/core/tests/pbt/: __init__.py  test_domain_properties.py  test_use_case_properties.py
config/: config.yaml.example  default.yaml
data/: bryan_voice_profile.json  bryan_voice_profile_v2.json  my_voice_profile.json
docs/: HEXAGONAL_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  SVELTE_UI_SPECIFICATION.md  TEXT_FORMATTING_GUIDE.md  api.md  development.md  (+5 more)
(+221 files in other folders)
